<resources>
    <string name="app_name" translatable="false">MusicApp</string>
    <string name="error_occurred">Error Occurred!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset password</string>
    <string name="unknown_error">Unknown error</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="registration">Registration</string>
    <string name="password_reset">Password reset</string>
    <string name="password_reset_email_sent">Password reset email was sent</string>
</resources>